--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
     <h2>Methodology</h2>
     <div class="card">
-        <h3>Workflow</h3>
-        <img src="images/workflow.png" alt="Project workflow diagram">
+        <h3>Molecular Graph</h3>
+        <img src="imgs/molecular-graph.png" alt="Project workflow diagram">
         
         <h3>Architecture</h3>
         <pre><code>GNN(
@@ -60,7 +60,7 @@
                 Achieved MSE: 0.0762</p>
             </div>
         </div>
-        <img src="images/feature_importance.png" alt="Feature importance plot" style="max-width: 600px;">
+        <img src="imgs/feature.png" alt="Feature importance plot" style="max-width: 600px;">
     </div>
 
     <h2>Conclusion</h2>
