--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <h1>AI-Driven Molecular Binding Affinity Prediction</h1>
+    <h1>Drug Discovery (Molecular Binding Affinity Prediction)</h1>
     
     <div class="card">
         <h2>Project Overview</h2>
