--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI-Driven Drug Discovery: Molecular Binding Affinity Prediction</title>
+    <title>Molecular Drug Discovery</title>
     <style>
         body {font-family: Arial, sans-serif; line-height: 1.6; margin: 2rem; max-width: 1200px; margin: auto;}
         h1 {color: #2c3e50; border-bottom: 3px solid #3498db; padding-bottom: 0.5rem;}
