--- a/index.html
+++ b/index.html
@@ -63,13 +63,22 @@
         <img src="imgs/feature.png" alt="Feature importance plot" style="max-width: 600px;">
     </div>
 
-    <h2>Conclusion</h2>
+    <h2>Conclusion/Future Work</h2>
     <p>The GNN model demonstrates promising results in predicting binding affinities, achieving an MSE of 0.0848. Future work includes:</p>
     <ul>
         <li>Integration of 3D molecular information</li>
         <li>Implementation of attention mechanisms</li>
         <li>Validation with real-world experimental data</li>
     </ul>
+
+    <section>
+        <h2>About</h2>
+        <ul>
+        <li>For a detailed look at the full project and its source code, please visit the <a href="https://github.com/optimizedLP/drug-discovery" target="_blank"><em><ins>GitHub</ins></em> repository</a>.</li>
+        <li>I welcome professional connections and discussions about this project or related topics. Feel free to connect with me on <a href="https://www.linkedin.com/in/dpjani" target="_blank"><ins><em>LinkedIn</ins></em></a>.</li>
+        <li>To learn more about my other projects and professional background, you can visit my <a href="https://dpjani.github.io/" target="_blank"><em><ins>personal website</ins></em></a>.</li>
+        </ul>
+    </section>
     
     <footer style="margin-top: 2rem; text-align: center; color: #7f8c8d;">
         <p>© 2023 Drug Discovery GNN Project. Powered by RDKit and PyTorch Geometric.</p>
