--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     </div>
 
     <h2>Conclusion/Future Work</h2>
-    <p>The GNN model demonstrates promising results in predicting binding affinities, achieving an MSE of 0.0848. Future work includes:</p>
+    <p>The GNN model demonstrates promising results in predicting binding affinities, achieving an MSE of 0.0848. </p>
+    <p>Future work includes:</p>
     <ul>
         <li>Integration of 3D molecular information</li>
         <li>Implementation of attention mechanisms</li>
