--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </section>
     
     <footer style="margin-top: 2rem; text-align: center; color: #7f8c8d;">
-        <p>© 2023 Drug Discovery GNN Project. Powered by RDKit and PyTorch Geometric.</p>
+        <p>© 2023 Drug Discovery GNN Project.</p>
     </footer>
 </body>
 </html>
